# Green-FL-Project

./: app.py  final_model.pt  pyproject.toml  requirements.txt
outputs/2026-03-19/09-47-28/: best_model.pth  best_model_info.txt  emission.csv  final_model.pt
outputs/2026-03-19/10-04-32/: best_model.pth  best_model_info.txt  emission.csv  final_model.pt
pytorchexample/: client_app.py  custom_strategy.py  model.py  server_app.py  task.py
wandb/: latest-run
wandb/offline-run-20260319_094746-64tq23ft/: run-64tq23ft.wandb
wandb/offline-run-20260319_100436-h0409jhy/: run-h0409jhy.wandb
wandb/offline-run-20260319_100940-3vhkym81/files/: requirements.txt
