[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.0.1"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "wandb>=0.17.8"
]

[tool.hatch.build.targets.wheel]
packages = ["."]
[superlink.local]
options.num-supernodes = 10
[tool.flwr.app]
publisher = "flwrlabs"
[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"
[tool.flwr.app.config]
strategy = "fedprox"
num-server-rounds = 10
franction-train = 1.0
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.1
batch-size = 32